--- a/h2.md
+++ b/h2.md
@@ -60,7 +60,14 @@ Tässä esimerkissä `top.sls`-tiedostoon lisättiin tieto, mitä tiloja tai mod
 
 Salt-tiedostojen lukemiseen käytetään oletusarvoisesti YAML-renderöijää, joka muuttaa YAML-muotoisen tekstin Python-tietorakenteeksi Saltia varten. YAML-muotoisen tekstin luomiseen on olemassa tarkat säännöt, joista tärkeimmät alla:
 
-**TÄYDENNETÄÄN MYÖHEMMIN**
+**Täydennetty 17.11.2024**
+
+Data on strukturoitu avain: arvo -pareihin. Näiden määrittelemiseen käytetään kaksoispistettä ja välilyöntiä (": ").
+
+Avainten arvon rakenteita on monia. Kaikki avaimet ja ominaisuudet ovat merkkikokoriippuvaisia.
+
+Sarkainta (tabulaattoria) EI saa käyttää, ainoastaan välilyöntejä. Kommentit alkavat aina risuaidalla (#).
+
 
 ## a) Hello Vagrant!
 
@@ -190,6 +197,51 @@ Tämän jälkeen pingasin toista konetta ja totesin, että yhteys toimii.
 ![image](https://github.com/user-attachments/assets/dadf49fc-58fd-4913-abaa-5362f3f99984)
 <br></br>
 
+## d) Herra-orja verkossa
+
+Käytin tätä tehtävää varten Teron [ohjetta](https://terokarvinen.com/2023/salt-vagrant/#ready-made-vagrantfile-for-three-computers), joten tuhosin ensin koneet jotka loin edellisessä tehtävässä. Kopioin Vagrantfilen sellaisenaan koneelle, jolla Vagrant oli asennettuna. Poistin konfiguraatiosta koneen `t002` koska tarvitsen tätä tehtävää varten ainoastaan kaksi konetta.
+
+![image](https://github.com/user-attachments/assets/c0e9f822-e204-42c4-a0bc-4f22a2f6ea37)
+<br></br>
+
+Tämän tiedoston pitäisi luoda kaksi virtuaalikonetta, joista toiselle asennetaan salt-master ja toiselle salt-minion. Kokeillaan, toimiiko.
+
+Heti ensimmäisenä huomasin asennuksen aikana, että unohdin korjata version häränsilmästä kirjamadoksi, joten keskeytin asennuksen ja kävin korjaamassa Vagrantfilen. Sen lisäksi korjasin jälleen IP-osoitteet oikeaksi.
+
+Toisen yrityksen jälkeen sain ilmoituksen, että paketteja salt-minion ja salt-master ei löydy. Tässä vaiheessa totesin ajan säästön nimissä asentaa isännän ja orjan koneille manuaalisesti.
+
+Kirjauduin ensin koneelle `t001` ja asensin orjan tämän [ohjeen](https://docs.saltproject.io/salt/install-guide/en/latest/topics/install-by-operating-system/linux-deb.html
+) avulla. Ensimmäisenä ongelmana oli curl-ohjelman puuttuminen, joten asensin sen.
+
+![image](https://github.com/user-attachments/assets/2fdfb765-2931-4b05-8233-6a326262951a)
+<br></br>
+
+Asennus onnistui lopulta, joten siirryin sen jälkeen tekemään samat stepit koneella `tmaster`.
+
+![image](https://github.com/user-attachments/assets/2065dfd7-bd74-425b-9893-34d752e5f441)
+<br></br>
+
+Asennus onnistui.
+
+![image](https://github.com/user-attachments/assets/3662b2ae-fd73-4254-b92c-c8df4f382f53)
+<br></br>
+
+Asennuksen jälkeen siirryin takaisin orjakoneelle lisäämään isäntäkoneen osoitteen `/etc/salt/minion`-tiedostoon. Käynnistin samalla servicen uudelleen komennolla `sudo systemctl restart salt-minion`.
+
+...ja takaisin isäntäkoneelle hyväksymään avaimet.
+
+![image](https://github.com/user-attachments/assets/22bc600c-b08e-4cd3-b497-36126b0035da)
+<br></br>
+
+Sen jälkeen kokeilin ajaa komennon `whoami` orjakoneella
+
+![image](https://github.com/user-attachments/assets/7f9642fe-8c50-4de7-afa0-c970214e8fa7)
+<br></br>
+
+Toimii!
+
+## e) Hei infrakoodi!
+
 
 
 # Lähteet
@@ -211,3 +263,5 @@ Salt project, Rules of YAML, YAML simple structure, Lists and dictionaries - YAM
 How to Install VirtualBox on Debian 12 (Bookworm): https://linuxiac.com/how-to-install-virtualbox-on-debian-12-bookworm/
 
 Unable to use new Vagrant install - Error while connecting to libvirt, StackExchange: https://stackoverflow.com/questions/55953554/unable-to-use-new-vagrant-install-error-while-connecting-to-libvirt
+
+Install Salt on Debian, Salt project: https://docs.saltproject.io/salt/install-guide/en/latest/topics/install-by-operating-system/linux-deb.html
