--- a/h2.md
+++ b/h2.md
@@ -252,6 +252,30 @@ Toimii!
 
 ## e) Hei infrakoodi!
 
+Lähdin luomaan init.sls tiedostoa isäntäkoneella, joka luo tiedoston jee_sukset.
+
+![image](https://github.com/user-attachments/assets/6b4c4014-8804-42ac-b929-dbe9e30f8238)
+<br></br>
+
+Kokeillaan paikallisesti
+
+![image](https://github.com/user-attachments/assets/cb57ae80-98cd-4eab-b541-bd4f380210f3)
+<br></br>
+
+Tiedosto löytyy samalta koneelta
+
+![image](https://github.com/user-attachments/assets/035206da-3744-4f26-9f52-8485b4ba9472)
+<br></br>
+
+## f) Verkon yli
+
+Kokeillaan ajaa sama esimerkkitiedosto orjalla. Kuvasta näkee, että ollaan isäntäkoneella `tmaster` ja että tiedosto on luotu orjakoneella `t001`
+
+![image](https://github.com/user-attachments/assets/6f831a4f-a563-4b9b-8d29-dceb2e08f2a4)
+<br></br>
+
+## g) Kaksi tilafunktiota
+
 
 
 # Lähteet
