--- a/h2.md
+++ b/h2.md
@@ -316,6 +316,8 @@ Alla testaan ajaa tilat orjakoneella ilman tilojen määrittelemistä komennossa
 ![image](https://github.com/user-attachments/assets/a9fc20ea-49c3-4101-95a9-770e830bb537)
 <br></br>
 
+Tehtävä valmis 17.11.2024 klo 20:20.
+
 
 # Lähteet
 
