--- a/h3.md
+++ b/h3.md
@@ -1,1 +1,40 @@
+# h3 Demoni
 
+## x) Lue ja tiivistä
+
+### [Pkg-File-Service – Control Daemons with Salt – Change SSH Server Port](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh)
+
+Saltilla pystyy ohjaamaan lukuisia daemoneita pkg-file-service-tilan avulla: pkg.installed asentaa paketin, file.managed luo asetustiedoston ja service.running potkaisee palvelun pystyyn. Helppoa ja vaivatonta!
+<br></br>
+
+### Tilafunktioiden `pkg`, `file` ja `service` tärkeimmät
+
+#### `pkg`
+
+Saltin tilafunktiolla `pkg` voidaan asentaa paketteja mm. apt-pakettivarastosta. Tilafunktiolla on lukuisia eri variaatioita, joilla paketteja voidaan hallita. Esimerkkinä: `pkg.installed`, `pkg.latest`, `pkg.removed` ja `pkg.purged`. Käyttämällä tilafunktiota `pkgs` voidaan asentaa monta pakettia kerralla.
+<br></br>
+
+##### `pkg.installed` ja `pkgs`
+
+Tilafunktio varmistaa, että sls-tiedostossa määritelty paketti on asennettuna. Tilafunktiossa voidaan halutessaan määritellä erikseen, mikä versio paketista halutaan asentaa. Version määrittely tapahtuu eri tavalla riippuen, asennatko yhden vai monta pakettia. Tilafunktiolla `pkgs` voidaan varmistaa monen paketin olevan asennettuna. Tilafunktion määrittelyssä on eroja `pkg` ja `pkgs` välillä, esim. paketin versionumero kirjoitetaan paketin nimen ja kaksoispisteen perään kun asennetaan monta pakettia `pkgs`-tilafunktiolla, kun taas yhden paketin asennuksessa versio kirjoitetaan omalle rivilleen paketin nimen alle (esim. `- version: 2:7.4.160-1.el7`).
+<br></br>
+
+##### `pkg.purged`
+
+Tilafunktiolla varmistetaan, että pakettia ei ole asennettu ja että kaikki pakettiin liittyvät asetustiedostot ovat poistettu. Tässäkin voidaan määritellä erikseen paketin versio jonka halutaan olevan poistettu.
+<br></br>
+
+#### `file`
+
+
+
+##### 
+
+## a) Apache easy mode
+
+
+# Lähteet
+
+Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h3-demoni
+
+Karvinen 2018: [Pkg-File-Service – Control Daemons with Salt – Change SSH Server Port](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh)
