--- a/h3.md
+++ b/h3.md
@@ -16,7 +16,7 @@ Saltin tilafunktiolla `pkg` voidaan asentaa paketteja mm. apt-pakettivarastosta.
 
 ##### `pkg.installed` ja `pkgs`
 
-Tilafunktio varmistaa, että sls-tiedostossa määritelty paketti on asennettuna. Tilafunktiossa voidaan halutessaan määritellä erikseen, mikä versio paketista halutaan asentaa. Version määrittely tapahtuu eri tavalla riippuen, asennatko yhden vai monta pakettia. Tilafunktiolla `pkgs` voidaan varmistaa monen paketin olevan asennettuna. Tilafunktion määrittelyssä on eroja `pkg` ja `pkgs` välillä, esim. paketin versionumero kirjoitetaan paketin nimen ja kaksoispisteen perään kun asennetaan monta pakettia `pkgs`-tilafunktiolla, kun taas yhden paketin asennuksessa versio kirjoitetaan omalle rivilleen paketin nimen alle (esim. `- version: 2:7.4.160-1.el7`).
+Tilafunktio varmistaa, että sls-tiedostossa määritelty paketti on asennettuna. Tilafunktiossa voidaan halutessaan määritellä erikseen, mikä versio paketista halutaan asentaa. Version määrittely tapahtuu eri tavalla riippuen, asennatko yhden vai monta pakettia. Tilafunktiolla `pkgs` voidaan varmistaa monen paketin olevan asennettuna. Tilafunktion määrittelyssä on eroja `pkg` ja `pkgs` välillä, esim. paketin versionumero kirjoitetaan paketin nimen ja kaksoispisteen perään kun asennetaan monta pakettia `pkgs`-tilafunktiolla, kun taas yhden paketin asennuksessa versio kirjoitetaan omalle rivilleen paketin nimen alle (esim. `version: 2:7.4.160-1.el7`).
 <br></br>
 
 ##### `pkg.purged`
@@ -26,15 +26,159 @@ Tilafunktiolla varmistetaan, että pakettia ei ole asennettu ja että kaikki pak
 
 #### `file`
 
+file-tilafunktiolla voidaan hallita tiedostoja lukuisin eri tavoin. Tiedostoja voidaan esim. lisätä, täydentää, poistaa, korvata... 
+<br></br>
 
+##### `file.managed`
 
-##### 
+Tilafunktio kopioi masterilla sijaitsevan tiedoston orjakoneelle. Mikäli lähdettä ei määritellä (tiedoston sijaintia isäntäkoneella), luodaan tyhjä tiedosto.
+<br></br>
+
+##### `file.absent`
+
+Tilafunktio varmistaa, että jokin tietty tiedosto on poistettu.
+<br></br>
+
+##### `file.symlink`
+
+Tilafunktiolla luodaan symlink, tai soft link, joka osoittaa olemassa olevaan tiedostoon. Tilafunktiossa määritellään symlinkin sekä tiedoston sijainti orjakoneella.
+<br></br>
+
+#### `service`
+
+Tilafunktiolla voidaan käynnistää tai sammuttaa daemoneita orjakoneella.
+<br></br>
+
+##### `service.running`
+
+Tilafunktio varmistaa, että palvelu on käynnissä.
+<br></br>
+
+##### `service.dead`
+
+Tilafunktio varmistaa, että palvelu on sammutettu.
+<br></br>
+
+##### `enable`
+
+service-tilafunktiossa voidaan määritellä palvelun nimen lisäksi se, halutaanko palvelun käynnistyvän automaattisesti uudelleenkäynnistyksen yhteydessä. Tämä tehdään lisäämällä funktioon omalle rivilleen `enabled: true`.
+<br></br>
 
 ## a) Apache easy mode
 
+Tehtävää varten käytän Lenovo L14 -kannettavaa, jossa AMD Ryzen 5 PRO 4650U, 24 GB RAM, 256 GB SSD, Debian 12 hostOS. Harjoitukset teen Vagrantilla ja Virtualboxilla.
+
+Alkuun sellainen huomio, että Vagrantilla tekemäni virtuaalikoneet asentuivat uudelleen joka kerta kun ajoin komennon `vagrant up`. Käsittääkseni tätä ei pitäisi tapahtua, ellei koneita erikseen tuhoa. Tässä vaiheessa kurssia tällä ei pitäisi olla merkitystä, joten jätin tämän avoimeksi kysymykseksi tunnille.
+<br></br>
+
+### Ensin käsin
+
+Laitoin ensiksi masterin ja orjan pystyyn komennolla `vagrant up`. Muutaman minuutin jälkeen koneet olivat käytettävissä, joten otin yhteyden orjakoneeseen komennolla `vagrant ssh t001`.
+
+![image](https://github.com/user-attachments/assets/106efca5-afc9-4ca1-8701-0af423bc8af8)
+<br></br>
+
+Sen jälkeen asensin apachen käsin. Lähteenä käytin tässä kokemustani Linux-palvelinkurssilta, sekä [tehtäväsivuilta](https://terokarvinen.com/linux-palvelimet/#h3-hello-web-server) löytyviä ohjeita.
+
+    sudo apt-get update && sudo apt-get install apache2
+<br></br>
+
+Tämän jälkeen korvasin heti testisivun
+
+![image](https://github.com/user-attachments/assets/cac05c0a-4404-4ce2-bc75-f0d6066520df)
+<br></br>
+
+Kokeilin, onko palvelu käynnissä (ja tietysti oli, kun localhost vastasi). Kokeilin vielä poistaa palvelun käytöstä ja käynnistää sen.
+
+![image](https://github.com/user-attachments/assets/5f49f3c2-2ed8-4b17-ba33-b69ac90896d4)
+<br></br>
+
+Lopuksi poistin asennuksen sekä kaikki asetustiedostot.
+
+    sudo apt-get purge apache2
+<br></br>
+
+### Sitten automaattisesti
+
+Heti ensimmäisenä yhteys isäntäkoneeseen
+
+    vagrant ssh tmaster
+<br></br>
+
+Olin siinä oletuksessa, että molemmat virtuaalikoneet olivat asennettu uudelleen, joten lähdin hyväksymään avaimet isäntäkoneella. Avaimia ei kuitenkaan ollut odottamassa ja `sudo salt-key` näytti, että orjakoneen avain oli jo asennettuna. Joten tehtävän alussa kirjoittamani huomio oli ehkä väärä.
+
+Loin hakemiston `/srv/salt/apache` johon lähdin luomaan tilatiedostoa `init.sls`. Olin siinä käsityksessä että tilatiedoston tulisi sisältää rivit paketin asennukselle (`pkg.installed`), Apachen oletussivun korvaamiselle (`file.managed`) sekä palvelun käynnistämiselle (`service.running`) Tässä vaiheessa päätin vielä palata Salt projectin sivuilla olevaan [dokumentaatioon](https://docs.saltproject.io/en/latest/ref/states/all/salt.states.file.html#salt.states.file.managed). Sieltä selvisi, että masterilla sijaitsevaan tiedostoon viitataan kirjoittamalla `salt://` ennen tiedoston hakemistoa. Joten loin tiedoston `index.html` apache-moduulin hakemistoon, joka sisälsi tekstinpätkän `testing apache on slave`.
+
+Tilatiedosto tuli näyttämään tältä:
+
+![image](https://github.com/user-attachments/assets/ed91f762-0b41-4337-89a9-3b1bb89d090c)
+<br></br>
+
+Sitten kokeilemaan 
+
+    sudo salt '*' state.apply apache
+<br></br>
+
+Virhe näytti olevan rivillä jossa viittasin index.html-tiedostoon. Kokeilin siirtää tiedoston kansioon ja muutin viittauksen tilatiedostossa, mutta samaa virheilmoitusta pukkasi.
+
+![image](https://github.com/user-attachments/assets/03de43a2-191b-4e50-b3ca-568175ab7a66)
+<br></br>
+
+Kokeilin jakaa tilatiedoston osiin jotta näkisin, missä kohtaa ongelma tulee. Aluksi pelkkä paketin asennus.
+
+![image](https://github.com/user-attachments/assets/0525738f-569d-4286-811d-cdc283698f74)
+<br></br>
+
+Virheillmoituksen perusteella tilatiedostossa näytti olevan typo, eli `package.installed` pitäisi tietty olla `pkg.installed`. Korjasin tämän, jonka jälkeen onnistui.
+
+![image](https://github.com/user-attachments/assets/2e272367-5b75-4375-a06b-343ef7d701e9)
+<br></br>
+
+![image](https://github.com/user-attachments/assets/9e8686cf-79f8-4c96-97f2-5cbb3d84c545)
+<br></br>
+
+Editoin tilatiedostoa ja poistin paketin (`pkg.installed` --> `pkg.purged`). Sen jälkeen kokeilin lisätä seuraavan tilafunktion ja ajaa sen uudestaan
+
+![image](https://github.com/user-attachments/assets/2c304265-aabb-4218-af45-cb73d1c730f3)
+<br></br>
+
+Sama ongelma edelleen. [YAML-validator](https://www.yamllint.com/)in mukaan source tulisi olla samalla rivillä kuin tilafunktio, mikä vaikutti oudolta. Tajusin itse lopulta ongelman, eli `file.managed` jälkeen puuttui kaksoipiste. Lisäämällä sen sain tämän toimimaan, ja tiedoston sisältö korvautui. 
+
+![image](https://github.com/user-attachments/assets/3ec827e5-fda3-4c27-91b0-fa520f9a8cae)
+<br></br>
+
+Lähdin sen jälkeen muokkaamaan tilatiedostoa muilta osin. Kun ajoin sen, sain virheeksi että samaa avainta on käytetty monessa paikassa (apache2). Sorruin tässä vaiheessa iltaa kysymään chatGPT:ltä apua, ja sen ehdottama korjaus toimi.
+
+Muutin viimeisen tilafunktion avaimeksi `apache2_service` ja lisäsin itse funktion jälkeen uudelle riville palvelun nimen. Lopputulos tyydytti.
+
+Mainittakoon vielä sen verran, että tiedosto löytyi jo ennestään samalla tekstillä edellisten testien jäljiltä, siksi mikään ei muuttunut. Edellinen testi kuitenkin osoitti sen toimivuuden.
+
+![image](https://github.com/user-attachments/assets/e4648119-4541-4f2a-8d1d-931e5c71a65d)
+<br></br>
+
+## b) SSHouto
+
+**TÄYDENNETÄÄN MYÖHEMMIN**
+<br></br>
+
+## c) Oma moduuli
+
+Meillä pyörii kotona SMB-palvelin Raspberry Pi 4:llä. Tällä hetkellä kaikki päivitykset ja uudelleenkäynnistykset ovat manuaalisia toimenpiteitä, ts. teen kun muistan. Voisin tehdä siitä orjan ja jossain määrin automatisoida ainakin päivitysten tekemistä ja palvelun potkaisemista + palvelimen uudelleenkäynnistystä.
+<br></br>
+
+## d) VirtualHost
+
+**TÄYDENNETÄÄN MYÖHEMMIN**
+<br></br>
 
 # Lähteet
 
 Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h3-demoni
 
 Karvinen 2018: [Pkg-File-Service – Control Daemons with Salt – Change SSH Server Port](https://terokarvinen.com/2018/04/03/pkg-file-service-control-daemons-with-salt-change-ssh-server-port/?fromSearch=karvinen%20salt%20ssh)
+
+Linux-palvelimet 2024 alkusyksy, Tero Karvinen: https://terokarvinen.com/linux-palvelimet/#h3-hello-web-server
+
+salt.states.file.managed, Salt project: https://docs.saltproject.io/en/latest/ref/states/all/salt.states.file.html#salt.states.file.managed
+
+YAMLint, YAML validator: https://www.yamllint.com
