--- a/h3.md
+++ b/h3.md
@@ -156,6 +156,13 @@ Mainittakoon vielä sen verran, että tiedosto löytyi jo ennestään samalla te
 ![image](https://github.com/user-attachments/assets/e4648119-4541-4f2a-8d1d-931e5c71a65d)
 <br></br>
 
+**Täydenys 21.11.2024 klo 16.23**
+
+Raporttia luettu pirtein silmin ja lisätty loppuun testi, jolla osoitan apachen toimivuuden orjakoneella (t001)
+
+![image](https://github.com/user-attachments/assets/4e8dbbf3-de5d-4c8e-8d9d-d6226439e33d)
+<br></br>
+
 ## b) SSHouto
 
 **TÄYDENNETÄÄN MYÖHEMMIN**
