--- a/h3.md
+++ b/h3.md
@@ -171,6 +171,10 @@ Raporttia luettu pirtein silmin ja lisätty loppuun testi, jolla osoitan apachen
 ## c) Oma moduuli
 
 Meillä pyörii kotona SMB-palvelin Raspberry Pi 4:llä. Tällä hetkellä kaikki päivitykset ja uudelleenkäynnistykset ovat manuaalisia toimenpiteitä, ts. teen kun muistan. Voisin tehdä siitä orjan ja jossain määrin automatisoida ainakin päivitysten tekemistä ja palvelun potkaisemista + palvelimen uudelleenkäynnistystä.
+
+Lisäys 21.11.2024:
+
+Voisiko tämän lisäksi pyörittää apachea, johon päivitetään jotain statuspäivitystä palvelimesta tms. Weppisivuun pääsisi suoraan helposti(?) kotiverkossa.
 <br></br>
 
 ## d) VirtualHost
