--- a/h3.md
+++ b/h3.md
@@ -165,7 +165,33 @@ Raporttia luettu pirtein silmin ja lisätty loppuun testi, jolla osoitan apachen
 
 ## b) SSHouto
 
-**TÄYDENNETÄÄN MYÖHEMMIN**
+**Täydennys 21.11.2024 klo 19.00**
+
+Aloitin luomalla uuden kansion `sshouto` hakemistoon `/srv/salt` isäntäkoneella. Loin `init.sls`-tiedoston, johon lisäsin seuraavat rivit (iteratiivinen prosessi, jossa korjasin mm. paketin nimen `ssh` --> `sshd` --> `openssh-server`, sekä palvelun nimen `ssh` --> `sshd`, jokaista korjausta en raportoinut).
+
+![image](https://github.com/user-attachments/assets/bfa35841-264c-450f-81dd-4d0c71a9c535)
+<br></br>
+
+Ajamalla `sudo salt '*' state.apply sshouto` sain seuraavan tuloksen, mikä viittasi onnistumiseen
+
+![image](https://github.com/user-attachments/assets/c885bd30-edf2-46c8-af69-2df5d42f788f)
+<br></br>
+
+Ensimmäisenä näkyi, että paketti oli jo asennettu (ei muutoksia)
+
+Toisena `sshd_config`-tiedostoon lisättiin rivi 'Port 2222'. Tässä olisi voinut käyttää tilafunktiota file.replace, jossa haetaan rivi jossa 'Port' on jo määritelty ja korvataan se, mutta tässä tehtävässä oli tarkoitus lisätä portti, joten tämä vaihtoehto toimi tässä
+
+Kolmantena näkyi, että palvelu oli potkaistu (restart)
+
+Yhteensä kolme onnistunutta funktiota, joista kaksi tekivät muutoksia.
+<br></br>
+
+Ajoin komennon vielä uudestaan sillä odotuksella, että muutoksia ei tehdä
+
+![image](https://github.com/user-attachments/assets/60895e15-5e14-4193-9f13-38eded2551a7)
+<br></br>
+
+Tehtävä valmis 21.11.2024 klo 19.21.
 <br></br>
 
 ## c) Oma moduuli
