--- a/h4.md
+++ b/h4.md
@@ -1,1 +1,25 @@
+# h4 Puolikas
+
+## Johdanto
+
+Minulla on kotona Raspberry Pi 4:llä pyörivä SMB-tiedostopalvelin. Ajatuksena oli jossain määrin automatisoida (tai ainakin helpottaa) päivitysten tekemistä sekä koneen ja palvelimen uudelleenkäynnistystä. Tämän lisäksi olin ideoinut verkkosivun tekemistä, johon päivittyisi jotain statistiikkaa palvelimen käytöstä. Katsotaan, onko kaikki toteutettavissa.
+
+### Saltin testausta kahden koneen välillä
+
+Käytin ensin toista taloudessta löytyvää Raspberryä (Pi400) saltin testaamiseen. Onnistuin asentamaan saltin-minionin Pi400:lle ja masterin Lenovon läppärille, jossa pyörii Debian 12. 
+
+Selvitin asennusten jälkeen ip-osoitteen masterista ja lisäsin tiedon minionin asetustiedostoon (`/srv/salt/minion`). Avasin myös masterin palomuurista portit 4505/tcp ja 4506/tcp. Tämän jälkeen hyväksyin avaimet masterilla ja kokeilin komentoja. Orjakone oli kiinni näytössä, joten pystyin todentamaan komennon toimineen, kun kone käynnistyi uudelleen.
+
+    sudo salt pi400 cmd.run 'sudo reboot now*
+
+
+Tässä raportissa ei vielä ole varsinaista edistymistä itse moduulin osalta, paitsi että olen todennut saltin herra-orja-arkkitehtuurin toimivan kotiverkossa olevin Linux-koneiden välillä. Seuraava askel on asentaa minion oikealla palvelinkoneelleni ja lähteä tekemää infraa koodina. Yksi työkalu, jonka käyttöä olen tutkinut, on SMBTA: https://wiki.samba.org/index.php/SMBTA
+
+
+# Lähteet
+
+Tehtävänanto: https://terokarvinen.com/palvelinten-hallinta/#h4-puolikas
+
+SMBTA: https://wiki.samba.org/index.php/SMBTA
+
 
