--- a/h4.md
+++ b/h4.md
@@ -4,7 +4,7 @@
 
 Minulla on kotona Raspberry Pi 4:llä pyörivä SMB-tiedostopalvelin. Ajatuksena oli jossain määrin automatisoida (tai ainakin helpottaa) päivitysten tekemistä sekä koneen ja palvelimen uudelleenkäynnistystä. Tämän lisäksi olin ideoinut verkkosivun tekemistä, johon päivittyisi jotain statistiikkaa palvelimen käytöstä. Katsotaan, onko kaikki toteutettavissa.
 
-### Saltin testausta kahden koneen välillä
+## Saltin testausta kahden koneen välillä
 
 Käytin ensin toista taloudessta löytyvää Raspberryä (Pi400) saltin testaamiseen. Onnistuin asentamaan saltin-minionin Pi400:lle ja masterin Lenovon läppärille, jossa pyörii Debian 12. 
 
