--- a/h4.md
+++ b/h4.md
@@ -12,6 +12,12 @@ Selvitin asennusten jälkeen ip-osoitteen masterista ja lisäsin tiedon minionin
 
     sudo salt pi400 cmd.run 'sudo reboot now*
 
+**Lisäys 27.11.2024 klo 14.00**
+
+Alla vielä yksi kuva, jolla osoitan herra-orja-arkkitehtuurin toimivan yllämainitulla tavalla
+
+![image](https://github.com/user-attachments/assets/a35f052f-7e22-4691-a282-b6a84b9c8b6a)
+<br></br>
 
 Tässä raportissa ei vielä ole varsinaista edistymistä itse moduulin osalta, paitsi että olen todennut saltin herra-orja-arkkitehtuurin toimivan kotiverkossa olevin Linux-koneiden välillä. Seuraava askel on asentaa minion oikealla palvelinkoneelleni ja lähteä tekemää infraa koodina. Yksi työkalu, jonka käyttöä olen tutkinut, on SMBTA: https://wiki.samba.org/index.php/SMBTA
 
