--- a/h5.md
+++ b/h5.md
@@ -1,1 +1,44 @@
+Asenna aina alkuun
 
+    $ sudo apt-get update && sudo apt-get install -y curl && sudo apt-get install -y micro
+<br></br>
+
+    $ export EDITOR=/usr/bin/micro
+
+
+Saltin asennus
+
+    $ sudo mkdir -p /etc/apt/keyrings && sudo curl -fsSL https://packages.broadcom.com/artifactory/api/security/keypair/SaltProjectKey/public | sudo tee /etc/apt/keyrings/salt-archive-keyring.pgp && sudo curl -fsSL https://github.com/saltstack/salt-install-guide/releases/latest/download/salt.sources | sudo tee /etc/apt/sources.list.d/salt.sources
+<br></br>
+
+Saltin asennus masterille
+
+    $ sudo apt-get update && sudo apt-get install -y salt-master
+
+Tarkista masterin IP
+
+    $ hostname -I
+    10.0.2.15
+
+
+Saltin asennus minionille
+
+    $ sudo apt-get update && sudo apt-get install -y salt-minion
+
+
+Masterin IP-osoitteen lisääminen minionin konfiguraatiotiedostoon
+
+    $ sudoedit /etc/salt/minion
+
+![image](https://github.com/user-attachments/assets/06f1da5b-f39a-4f54-af36-e39186a0f011)
+<br></br>
+
+Palvelun potkaisu minionilla
+
+    $ sudo systemctl restart salt-minion
+
+Avainten hyväksyntä masterilla
+
+master: 192.168.56.102
+
+    
