--- a/h4.md
+++ b/h4.md
@@ -2,6 +2,11 @@
 
 ## Johdanto
 
+**LISÄYS 4.12.2024 klo 13:51 Päätin sittenkin lähteä rakentamaan VPN:ää palvelimelle Saltilla, raportti löytyy täältä: https://github.com/Claptrack/Configure-Wireguard-on-slave-with-Salt**
+<br></br>
+*****************************************************************************
+<br></br>
+
 Minulla on kotona Raspberry Pi 4:llä pyörivä SMB-tiedostopalvelin. Ajatuksena oli jossain määrin automatisoida (tai ainakin helpottaa) päivitysten tekemistä sekä koneen ja palvelimen uudelleenkäynnistystä. Tämän lisäksi olin ideoinut verkkosivun tekemistä, johon päivittyisi jotain statistiikkaa palvelimen käytöstä. Katsotaan, onko kaikki toteutettavissa.
 
 ## Saltin testausta kahden koneen välillä
